tests/cases/parser/literals/characters/malformed_char_literals.stderr
error: character literals may only contain one codepoint
 --> $DIR/malformed_char_literals.hash:3:6
2 |   
3 |   k := 'av';
  |        ^^^^ here
  = help: if you meant to write a string literal, use `"` instead
